schema/testdata/errors/expression_enum_set_with_invalid_rhs_operators.keel
model Thing {
    fields {
        number Number
    }

    actions {
        update updateThing1(id) {
            //expect-error:18:37:AttributeExpressionError:undeclared reference to '_+_' (in container '')
            @set(post.number = post.number + 1)
        }
    }
}

enum PostStatus {
    Published
    Draft
}

enum OtherPostStatus {
    Something
    Else
}
